<resources>
    <string name="app_name">FootballFantasy</string>
    <string name="intro_1">Discover all about football</string>
    <string name="text1">Create your own football team and move it to a Champions League Final. Let’s get start it!</string>
    <string name="start">Start it</string>
    <string name="e_login">Enter your login:</string>
    <string name="login">Login</string>
    <string name="Start_game">Start game</string>
    <string name="edit">Editor</string>
    <string name="add">Add</string>
    <string name="edit1">Edit</string>
    <string name="delete">Delete</string>
    <string name="club">Club name:</string>
    <string name="country">Club country:</string>
    <string name="manager">Club manager:</string>
    <string name="rating">Club rating:</string>
    <string name="create">Create club</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="editc">Edit club</string>
    <string name="choose">Choose 2 teams</string>
    <string name="clubs">Clubs</string>

</resources>