<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_app"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textViewClubTable"
        android:layout_width="369dp"
        android:layout_height="452dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
        tools:text="Club Table Placeholder" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="105dp"
        android:layout_height="47dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/search"
        android:textColor="#FEFEFE"
        android:textSize="14sp"
        app:backgroundTint="@color/blue_app"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/searchEditText"
        app:layout_constraintTop_toTopOf="@+id/view4"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnStart1"
        android:layout_width="172dp"
        android:layout_height="56dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/Start_game"
        android:textColor="#FEFEFE"
        android:textSize="14sp"
        app:backgroundTint="@color/blue_app"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textViewClubTable"
        app:layout_constraintVertical_bias="0.46" />

    <Button
        android:id="@+id/btnback1"
        android:layout_width="172dp"
        android:layout_height="56dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/back"
        android:textColor="#FEFEFE"
        android:textSize="14sp"
        app:backgroundTint="@color/blue_app"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toStartOf="@+id/btnStart1"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textViewClubTable"
        app:layout_constraintVertical_bias="0.46" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="258dp"
        android:layout_height="44dp"
        android:layout_marginTop="56dp"
        android:background="@android:color/white"
        android:hint="Search Club"
        android:inputType="text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewClubTable"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view4"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/view4"
        android:layout_width="397dp"
        android:layout_height="690dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity=""
        android:text="@string/clubs"
        android:textColor="#FEFEFE"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

</androidx.constraintlayout.widget.ConstraintLayout>
